# blogging-platform-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
account/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_customuser_email.py
account/services/: auth_service.py  decorators.py  mixins.py  rating_service.py  subscription_service.py  users_range_service.py  view_mixins.py
account/templates/: base.html  index.html
account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register_done.html  register_form.html
account/templates/users/: list.html  sidebar.html
blog/: admin.py  context_processors.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_published.py  0003_alter_article_published.py  0004_alter_article_published.py  0005_alter_article_published.py  0006_alter_article_published.py  0007_alter_article_published.py  0008_alter_article_published.py  0009_alter_article_published.py  0010_alter_content_options.py  0011_alter_content_options.py
blog/services/: article_content_service.py  article_like_service.py  article_range_service.py  article_rating_service.py  utils.py  view_mixins.py
config/: asgi.py  settings.py  urls.py  yasg.py
static/css/: base.css
static/js/: like.js  subscription.js
(+21 files in other folders)
